# whatsapp-mcp

./: .gitignore
auto-reply/: PERSONA.md  bridge.py  chunker.py  claude_runner.py  config.py  config.yaml  daemon.py  llm.py  pairing.py  pyproject.toml  sessions.py
auto-reply/tests/: test_bridge.py  test_chunker.py  test_claude_runner.py  test_config.py  test_daemon.py  test_pairing.py  test_sessions.py
auto-reply/workspace/: CLAUDE.md
whatsapp-bridge/: main.go
whatsapp-mcp-server/: main.py  whatsapp.py
